--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+<head>
 
-<meta charset="utf-8">
-<title>sylvia's homepage</title>
+  <meta charset="utf-8">
+  <title>sylvia's homepage</title>
 </head>
-<body></body>
+<body>
+  <header>
+  <h1>I Just Want To Share Some Things To You!</h1>  
+  </header>
+</body>
 </html>
