--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+   <meta name="baidu-site-verification" content="T4dEltenWL" />
   <meta charset="utf-8">
-  <title>sylvia's homepage</title>
+ <title>sylvia's homepage</title>
+  <style>
+    body {
+      font-family: Verdana;
+      font-size: 15px;
+      
+      background-size:100%;
+    }
+  </style>
+ 
+  
 </head>
 <body>
   <header>
