use py's index.html

--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title> sylvia's webpage</title>
+  <meta name="baidu-site-verification" content="T4dEltenWL" />
+  <meta charset="utf-8">
+  <title>site of cumulus</title>
+  <style>
+    body {
+      font-family: Verdana;
+      font-size: 15px;
+      background: url('images/background.jpg');
+      background-size:100%;
+    }
+  </style>
+  
+ 
 </head>
 
 <body>
+  <header>
+    <h1>This site is a site for study</h1>
+    <p class="Byline">by cumulus</p>
+  </header>
+  <p>Background Music: <cite>奏 (かなで)-雨宮天</cite></p>
 
-
-<a href="hexo/index.html">我的博客</a>
+  <h5>link:</h5>
+  <p class="link">
+    
+    <a href="hexo/index.html">blog</a><br>
+  </p>
 </body>
-
-
+</html>
 </html>
