yilia and my index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="baidu-site-verification" content="T4dEltenWL" />
   <meta charset="utf-8">
-  <title>site of cumulus</title>
+  <title>Sylvia's webpage</title>
   <style>
     body {
       font-family: Verdana;
@@ -18,11 +18,7 @@
 
 <body>
   <header>
-    <h1>This site is a site for study</h1>
-    <p class="Byline">by cumulus</p>
-  </header>
-  <p>Background Music: <cite>奏 (かなで)-雨宮天</cite></p>
-
+    
   <h5>link:</h5>
   <p class="link">
     
